# segatex-ng

./: AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  TODO  configure.ac  segatex-ng.conf  segatexd.conf  segatexd.h  segatexd_tcp_send_data.txt
agent/: Makefile.am  main.c  main.h  tcp_client.c  tcp_client.h
agent/unused/: discover.c
common/: dso.h  private.h
data/: segatexd_tcp_send_data.txt
dbus/: consumeservice.py
server/: Makefile.am  cfg.c  cfg.h  daemonize.c  daemonize.h  dso.h  libsegatex.h  main.c  main.h  message.c  private.h  tcp_server.c  tcp_server.h
server/unused/: getopt_long.h  main_nss-pam-ldap-origin.c
src/: Makefile.am  cfg.c  cfg.h  daemonize.c  main.c  main.h
src/.deps/: ctest1.Po  ctest2.Po  prog.Po
src/unused/: daemonize_old.c
tests/: TCP-nonblocking-client.c  TCP-nonblocking-server.c  close.c  tcp_client.c  tcp_server.c  zzz.c
